--- a/src/assets/style/home/index.less
+++ b/src/assets/style/home/index.less
@@ -3,3 +3,9 @@ body{
     font-size:16px;
     font-weight:600;
 }
+a{
+    display:block;
+    font-weight:600;
+    font-family:simhei;
+    font-size:2em;
+}
