--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -3,5 +3,7 @@ html
         meta(charset='utf-8')
         title index
         script(src='scripts/home/index.js')
+        link(rel="stylesheet", href="assets/style/home/index.css")
     body
-        a(href="view/index.html") testjadeasd     
+        a(href="page/test.html") testjad
+        a(href="main.html") main.html test
